[workspace]
members = ["codegen", "."]

[package]
name = "libpq"
version = "2.0.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sanpii/libpq.rs"
description = "Safe binding for libpq"
keywords = ["database", "postgres", "postgresql", "sql"]
categories = ["database"]

[dependencies]
bitflags = "2.0"
flexi_logger = "0.17"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.10"
