[workspace]
members = ["codegen", "libpq-sys", "."]

[package]
name = "libpq"
version = "4.0.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sanpii/libpq.rs"
description = "Safe binding for libpq"
keywords = ["database", "postgres", "postgresql", "sql"]
categories = ["database"]
readme = "README.md"
rust-version = "1.77"

[dependencies]
libc = "0.2"
log = "0.4"
thiserror = "1.0"

[dependencies.bitflags]
version = "2.0"
optional = true

[dependencies.pq-sys]
package = "libpq-sys"
path = "libpq-sys"
version = "0.8"

[dev-dependencies]
env_logger = "0.11"

[dev-dependencies.mio]
version = "0.8"
features = ["os-ext", "os-poll"]

[features]
default = []
v11 = []
v12 = ["v11"]
v13 = ["v12"]
v14 = ["v13", "bitflags"]
v15 = ["v14"]
v16 = ["v15"]
