[workspace]
members = ["codegen", "libpq-sys", "."]

[workspace.dependencies]
thiserror = "2.0"

[package]
name = "libpq"
version = "5.0.2"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/sanpii/libpq.rs"
description = "Safe binding for libpq"
keywords = ["database", "postgres", "postgresql", "sql"]
categories = ["database"]
readme = "README.md"

[dependencies]
bitflags = "2.0"
libc = "0.2"
log = "0.4"
thiserror.workspace = true

[dependencies.pq-sys]
package = "libpq-sys"
path = "libpq-sys"
version = "0.8"

[dev-dependencies]
env_logger = "0.11"

[dev-dependencies.mio]
version = "1.0"
features = ["os-ext", "os-poll"]

[features]
default = []
v11 = []
v12 = ["v11"]
v13 = ["v12"]
v14 = ["v13"]
v15 = ["v14"]
v16 = ["v15"]
v17 = ["v16"]

[[example]]
name = "testlibpq"
doc-scrape-examples = true

[[example]]
name = "testlibpq2"
doc-scrape-examples = true

[[example]]
name = "testlibpq3"
doc-scrape-examples = true

[[example]]
name = "testlibpq4"
doc-scrape-examples = true

[[example]]
name = "testlo"
doc-scrape-examples = true

[[example]]
name = "testlo64"
doc-scrape-examples = true

[package.metadata.docs.rs]
features = ["v15"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
